# codedown-languages

./: .envrc  .gitignore  .gitmodules  OPTIONS.md  README.md  channels.nix  check_code.nix  checks.nix  ci.nix  codedown.nix  default.nix  default_old.nix  empty_environment.nix  environment.nix  evcxr.nix  flake.nix  kernels.nix  my-package.nix  old_environment.nix  overlays.nix  package.sh  packs.nix  sample_environments.nix  sample_environments_generate.sh  searcher.nix  searchers.nix  shell.nix  spec_yaml.nix  update-ci.sh  update-default-nix.sh  update.sh  update_gcroots.sh  util.nix  view_environment_sizes.sh
.aliases/: dev-gcroots-build  dev-print-versions  dev-sample-environments-generate  dev-sample-environments-view-sizes  dev-update-default-nix-to-match-flake  dev-update-nixpkgs  dev-update-nixpkgs-master  dev-update-options  dev-verify-default-nix  sample-environments-visualize  update-default-nix  verify-default-nix
.github/: ci.yml
@types/: .gitignore  index.d.ts  package-lock.json  package.json  tsconfig.json
checks/: bash.nix  check_code.nix  cpp.nix  haskell.nix  julia.nix  python.nix  run_code.sh
codedown/: evaluate-config.nix  makeEnvironment.nix  makeEnvironmentPrime.nix  mkCodeDownEnvironment.nix  spec_yaml.nix  uiMetadata.nix  validateCodeDownEnvironment.nix
docs/: rust-kernel-extraction-plan.md
exporters/: common.nix  fix-asciidoc.patch  module.nix  nbconvert.nix  pandoc.nix  slidy.nix
languages/python/envs/python311/: pyproject.toml
languages/python/envs/python38/: pyproject.toml
languages/python/envs/python39/: pyproject.toml
(+713 files in other folders)
