[tool.poetry]
name = "python311"
version = "0.1.0"
description = ""
authors = ["Tom McLaughlin <tom@codedown.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
ipykernel = "^6.25.0"
ipywidgets = "^8.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
